--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
+    "react-router-dom": "^6.22.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
